# ai-cv-library

./: .commitlintrc.mjs  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  LICENSE.md  analysis_options.yaml  package.json  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.husky/: commit-msg  pre-push
assets/: credentials.json  labels.txt
example/: ai_cv_library_example.dart
lib/: ai_cv_library.dart
lib/src/: image_analysis_result.dart  image_processing.dart  main.dart  model_loader.dart  native_opencv.dart  object_detection.dart  utils.dart
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/example/: pubspec.yaml
native_opencv/example/android/app/: build.gradle
native_opencv/example/integration_test/: plugin_integration_test.dart
native_opencv/example/ios/Runner.xcodeproj/: project.pbxproj
native_opencv/example/test/: widget_test.dart
native_opencv/ios/: native_opencv.podspec
native_opencv/ios/Classes/: native_opencv.cpp
native_opencv/lib/: native_opencv.dart  native_opencv_method_channel.dart
native_opencv/test/: native_opencv_method_channel_test.dart  native_opencv_test.dart
test/: ai_cv_library_test.dart
